--- a/AppInstaller/app/build.gradle
+++ b/AppInstaller/app/build.gradle
@@ -10,7 +10,8 @@ android {
 
     defaultConfig {
         applicationId "com.samples.appinstaller"
-        minSdkVersion 21
+        // TODO: Revert back to API 21
+        minSdkVersion 26
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
