--- a/AppInstaller/app/build.gradle
+++ b/AppInstaller/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation 'androidx.work:work-runtime-ktx:2.7.0-alpha03'
+    implementation 'androidx.datastore:datastore:1.0.0-beta01'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
