--- a/AppInstaller/build.gradle
+++ b/AppInstaller/build.gradle
@@ -15,14 +15,32 @@ buildscript {
     }
 }
 
+plugins {
+    id "com.diffplug.spotless" version "5.12.5"
+}
+
 allprojects {
     repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
+        gradlePluginPortal()
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+subprojects {
+    apply plugin: 'com.diffplug.spotless'
+    spotless {
+        kotlin {
+            target "**/*.kt"
+            ktlint('0.41.0')
+            licenseHeaderFile rootProject.file('spotless/copyright.txt')
+        }
+
+        groovyGradle {
+            target '**/*.gradle'
+            greclipse().configFile(rootProject.file('spotless/greclipse.properties'))
+            licenseHeaderFile rootProject.file('spotless/copyright.txt'),
+                    '(buildscript|apply|import|plugins)'
+        }
+    }
 }
