--- a/AppInstaller/app/build.gradle
+++ b/AppInstaller/app/build.gradle
@@ -53,14 +53,19 @@ android {
         viewBinding true
         dataBinding true
     }
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.5.0'
+    implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
@@ -74,15 +79,16 @@ dependencies {
     kapt 'androidx.room:room-compiler:2.3.0'
 
     implementation 'androidx.work:work-runtime-ktx:2.7.0-alpha04'
+    androidTestImplementation 'androidx.work:work-testing:2.7.0-alpha04'
 
     implementation 'androidx.lifecycle:lifecycle-process:2.3.1'
 
-    implementation 'androidx.datastore:datastore:1.0.0-beta01'
+    implementation 'androidx.datastore:datastore:1.0.0-rc01'
     implementation 'com.google.protobuf:protobuf-javalite:3.10.0'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
 
 protobuf {
