--- a/AppInstaller/app/src/main/AndroidManifest.xml
+++ b/AppInstaller/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         tools:ignore="QueryAllPackagesPermission" />
 
     <application
+        android:name=".AppInstallerApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
