--- a/AppInstaller/app/build.gradle
+++ b/AppInstaller/app/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     implementation 'com.google.protobuf:protobuf-javalite:3.10.0'
 
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'androidx.test:core:1.4.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
